fix <nav> collapsing since all children are floated

--- a/app/css/main.scss
+++ b/app/css/main.scss
@@ -35,6 +35,8 @@ body {
     }
 
     nav {
+      // fix collapsed parent of floated children issue
+      overflow: auto;
       position: relative;
 
       a,
